--- a/style.css
+++ b/style.css
@@ -238,7 +238,7 @@ section .title::after{
 .services .title::after,
 .teams .title::after{
     background: #111;
-    content: "Em desenvolvimento";
+    content: "By JohnnyPontes";
 }
 .services .serv-content .card{
     width: calc(33% - 20px);
