--- a/style.css
+++ b/style.css
@@ -185,7 +185,7 @@ section .title::after{
 /*  sessão sobre  */
 
 .about .title::after{
-    content: "Quem sou eu";
+    content: "Quem sou";
 }
 .about .about-content .left{
     width: 45%;
@@ -238,7 +238,7 @@ section .title::after{
 .services .title::after,
 .teams .title::after{
     background: #111;
-    content: "By JohnnyPontes";
+    content: "--";
 }
 .services .serv-content .card{
     width: calc(33% - 20px);
